crates/nash-can/src/snapshots/nash_can__module__tests__let_mutual_recursion.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nf =\n    let\n        go x = stop x\n        stop x = go x\n    in\n    go 1\n"
---
Module {
    tests: [],
    traits: [],
    impls: [],
    kind: Normal,
    name: ModuleName {
        package: None,
        name: "Main",
    },
    exports: Everything(
        Region {
            start: Position {
                line: 1,
                column: 22,
            },
            end: Position {
                line: 1,
                column: 26,
            },
        },
    ),
    docs: NoDocs(
        Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 9,
                column: 1,
            },
        },
    ),
    decls: Declare {
        definition: Def {
            name: Located {
                region: Region {
                    start: Position {
                        line: 3,
                        column: 1,
                    },
                    end: Position {
                        line: 3,
                        column: 2,
                    },
                },
                value: "f",
            },
            args: [],
            body: Located {
                region: Region {
                    start: Position {
                        line: 4,
                        column: 5,
                    },
                    end: Position {
                        line: 9,
                        column: 1,
                    },
                },
                value: LetRec {
                    definitions: [
                        Def {
                            name: Located {
                                region: Region {
                                    start: Position {
                                        line: 5,
                                        column: 9,
                                    },
                                    end: Position {
                                        line: 5,
                                        column: 11,
                                    },
                                },
                                value: "go",
                            },
                            args: [
                                Located {
                                    region: Region {
                                        start: Position {
                                            line: 5,
                                            column: 12,
                                        },
                                        end: Position {
                                            line: 5,
                                            column: 13,
                                        },
                                    },
                                    value: Var(
                                        "x",
                                    ),
                                },
                            ],
                            body: Located {
                                region: Region {
                                    start: Position {
                                        line: 5,
                                        column: 16,
                                    },
                                    end: Position {
                                        line: 5,
                                        column: 22,
                                    },
                                },
                                value: Call {
                                    function: Located {
                                        region: Region {
                                            start: Position {
                                                line: 5,
                                                column: 16,
                                            },
                                            end: Position {
                                                line: 5,
                                                column: 20,
                                            },
                                        },
                                        value: VarLocal(
                                            "stop",
                                        ),
                                    },
                                    arguments: [
                                        Located {
                                            region: Region {
                                                start: Position {
                                                    line: 5,
                                                    column: 21,
                                                },
                                                end: Position {
                                                    line: 5,
                                                    column: 22,
                                                },
                                            },
                                            value: VarLocal(
                                                "x",
                                            ),
                                        },
                                    ],
                                },
                            },
                        },
                        Def {
                            name: Located {
                                region: Region {
                                    start: Position {
                                        line: 6,
                                        column: 9,
                                    },
                                    end: Position {
                                        line: 6,
                                        column: 13,
                                    },
                                },
                                value: "stop",
                            },
                            args: [
                                Located {
                                    region: Region {
                                        start: Position {
                                            line: 6,
                                            column: 14,
                                        },
                                        end: Position {
                                            line: 6,
                                            column: 15,
                                        },
                                    },
                                    value: Var(
                                        "x",
                                    ),
                                },
                            ],
                            body: Located {
                                region: Region {
                                    start: Position {
                                        line: 6,
                                        column: 18,
                                    },
                                    end: Position {
                                        line: 6,
                                        column: 22,
                                    },
                                },
                                value: Call {
                                    function: Located {
                                        region: Region {
                                            start: Position {
                                                line: 6,
                                                column: 18,
                                            },
                                            end: Position {
                                                line: 6,
                                                column: 20,
                                            },
                                        },
                                        value: VarLocal(
                                            "go",
                                        ),
                                    },
                                    arguments: [
                                        Located {
                                            region: Region {
                                                start: Position {
                                                    line: 6,
                                                    column: 21,
                                                },
                                                end: Position {
                                                    line: 6,
                                                    column: 22,
                                                },
                                            },
                                            value: VarLocal(
                                                "x",
                                            ),
                                        },
                                    ],
                                },
                            },
                        },
                    ],
                    body: Located {
                        region: Region {
                            start: Position {
                                line: 8,
                                column: 5,
                            },
                            end: Position {
                                line: 8,
                                column: 9,
                            },
                        },
                        value: Call {
                            function: Located {
                                region: Region {
                                    start: Position {
                                        line: 8,
                                        column: 5,
                                    },
                                    end: Position {
                                        line: 8,
                                        column: 7,
                                    },
                                },
                                value: VarLocal(
                                    "go",
                                ),
                            },
                            arguments: [
                                Located {
                                    region: Region {
                                        start: Position {
                                            line: 8,
                                            column: 8,
                                        },
                                        end: Position {
                                            line: 8,
                                            column: 9,
                                        },
                                    },
                                    value: Int(
                                        1,
                                    ),
                                },
                            ],
                        },
                    },
                },
            },
        },
        next: Empty,
    },
    unions: [],
    aliases: [],
    binops: [],
}
