crates/nash-can/src/snapshots/nash_can__module__tests__let_mutual_recursion_values_error.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nf =\n    let\n        a = b\n        b = a\n    in\n    a\n"
info: diagnostic
---
nash::names::recursive_let

  × Value `a` depends on itself.
   ╭─[src/Main.nash:5:9]
 4 │     let
 5 │         a = b
   ·         ─
 6 │         b = a
   ╰────
  help:     ┌─────┐
            │    a
            │     ↓
            │    b
            └─────┘

        Break the cycle between these value definitions.
